<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground">

    <ImageView
        android:id="@+id/toolbar"
        android:layout_width="@dimen/size_icon_btn"
        android:layout_height="@dimen/size_icon_btn"
        android:src="@drawable/ic_back"
        android:background="@drawable/bg_icon_btn"
        android:padding="6dp"
        android:contentDescription="@string/content_desc_back"
        android:layout_marginStart="@dimen/space_base"
        android:layout_marginTop="@dimen/space_md"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/labelStaff"
        style="@style/TextAppearance.Checkly.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/staff_label"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImage"
        android:layout_width="@dimen/size_avatar_lg"
        android:layout_height="@dimen/size_avatar_lg"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/CircleImageView"
        android:background="@drawable/bg_avatar_hero"
        android:contentDescription="@string/content_desc_avatar"
        android:layout_marginTop="@dimen/space_lg"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/staffName"
        style="@style/TextAppearance.Checkly.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Aziza Karimova" />

    <TextView
        android:id="@+id/staffRole"
        style="@style/TextAppearance.Checkly.BodySmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/staffName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Floor manager" />

    <TextView
        android:id="@+id/createdAt"
        style="@style/TextAppearance.Checkly.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/staffRole"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Joined Apr 2026" />

    <LinearLayout
        android:id="@+id/kpiRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/space_base"
        android:layout_marginTop="@dimen/space_lg"
        app:layout_constraintTop_toBottomOf="@id/createdAt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/space_sm"
            android:orientation="vertical"
            android:background="@drawable/bg_card"
            android:elevation="@dimen/elev_card"
            android:padding="@dimen/space_md"
            android:gravity="center">

            <TextView
                android:id="@+id/kpiToday"
                style="@style/TextAppearance.Checkly.Headline"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="8" />

            <TextView
                style="@style/TextAppearance.Checkly.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/staff_kpi_today" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/space_sm"
            android:orientation="vertical"
            android:background="@drawable/bg_card"
            android:elevation="@dimen/elev_card"
            android:padding="@dimen/space_md"
            android:gravity="center">

            <TextView
                android:id="@+id/kpiOnTime"
                style="@style/TextAppearance.Checkly.Headline"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="94%" />

            <TextView
                style="@style/TextAppearance.Checkly.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/staff_kpi_on_time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/bg_card"
            android:elevation="@dimen/elev_card"
            android:padding="@dimen/space_md"
            android:gravity="center">

            <TextView
                android:id="@+id/kpiOverdue"
                style="@style/TextAppearance.Checkly.Headline"
                android:textSize="20sp"
                android:textColor="@color/danger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2" />

            <TextView
                style="@style/TextAppearance.Checkly.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/staff_kpi_overdue" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tasksHeader"
        style="@style/TextAppearance.Checkly.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/staff_h_today"
        android:layout_marginStart="@dimen/space_base"
        android:layout_marginTop="@dimen/space_lg"
        app:layout_constraintTop_toBottomOf="@id/kpiRow"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasksRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_sm"
        android:paddingHorizontal="@dimen/space_base"
        android:paddingBottom="@dimen/space_2xl"
        android:clipToPadding="false"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/tasksHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addTaskFab"
        android:layout_width="@dimen/size_fab"
        android:layout_height="@dimen/size_fab"
        android:layout_margin="@dimen/space_base"
        app:backgroundTint="@color/primary"
        app:srcCompat="@drawable/ic_plus"
        app:tint="@color/text_on_primary"
        app:elevation="@dimen/elev_fab"
        android:contentDescription="@string/content_desc_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
